feat(agent): integrate LangGraph pipeline, heuristics, fallback SQL; fix Docker ports and .env; tighten rate limiting for tests

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,28 @@
-# Variables de base de datos
+########################################
+# ArteVida SQL Agent - .env.example    #
+########################################
+
+# Backend
+PORT=3000
+NODE_ENV=development
+LOG_LEVEL=info
+
+# Database (match docker-compose when running locally)
+# If you run MySQL via docker-compose, host is localhost and port is 13306
 DB_HOST=localhost
-DB_PORT=3306
+DB_PORT=13306
 DB_NAME=artevida_cultural
 DB_USER_RO=readonly_user
 DB_PASS_RO=readonly_pass123
 
-# Configuración del servidor
-PORT=3000
-NODE_ENV=development
-
-# Rate limiting
+# Timeouts and limits
+SQL_TIMEOUT_MS=10000
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX=30
 
-# Timeout de consultas SQL (milisegundos)
-SQL_TIMEOUT_MS=10000
+# Optional OpenAI
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o-mini
 
-# Logging
-LOG_LEVEL=info
+# Feature flags
+USE_LANGGRAPH=false
