--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "openai": "^4.104.0",
     "pino": "^8.16.2",
     "pino-http": "^8.5.1",
+    "@langchain/langgraph": "^0.1.5",
+    "langchain": "^0.3.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
