--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "start": "node dist/index.js",
     "test": "vitest --run",
     "test:watch": "vitest",
+    "test:100": "cross-env RUN_100_PROMPTS=true vitest --run test/chat_prompts_100.test.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "migrate": "tsx src/migrate.ts",
-    "seed": "mysql -h${DB_HOST} -P${DB_PORT} -u${DB_USER_RO} -p${DB_PASS_RO} ${DB_NAME} < seeds/seed.sql",
+    "seed": "mysql -h${DB_HOST} -P${DB_PORT} -uroot -p${DB_ROOT_PASSWORD} < seeds/bd.sql",
+    "run:prompts": "tsx scripts/run_prompts.ts",
+    "run:test-questions": "tsx scripts/run_test_questions.ts",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down"
   },
@@ -47,7 +50,9 @@
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.53.0",
+    "node-fetch": "^3.3.2",
     "pino-pretty": "^13.1.1",
     "rimraf": "^5.0.5",
     "supertest": "^6.3.3",
