--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,10 @@
     "emitDecoratorMetadata": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test",
+    "src/agent/**"
+  ]
 }
