--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,20 @@
 # Variables de base de datos
 DB_HOST=localhost
-DB_PORT=3306
+# Nota: docker-compose expone MySQL en 13306 -> 3306
+DB_PORT=13306
 DB_NAME=artevida_cultural
 DB_USER_RO=readonly_user
 DB_PASS_RO=readonly_pass123
+# Usado por scripts de migración/seed (usuario root)
+DB_ROOT_PASSWORD=rootpass123
 
 # Configuración del servidor
 PORT=3000
 NODE_ENV=development
+
+# OpenAI (opcional, para respuestas naturales mejores)
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o-mini
 
 # Rate limiting
 RATE_LIMIT_WINDOW_MS=60000
